--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,102 @@
     font-style: normal;
     font-variation-settings: "width" 100;
   }
+/* ------------------------- */
 *{
-    margin: 10px auto;
+    margin: 0;
+    padding: 0;
+    /* background-color: #f5f5f5; */
+}
+body{
+    max-width: 1600px;
+    min-width: 600px;
+    margin: 1.5rem auto;
 }
 /* ------------------------- */
 /* Shared Styles */
 .textcenter{
     text-align: center;
+}
+.primary-btn{
+    padding: .8rem 1.6rem;
+    border-radius: .5rem;
+    background: rgb(0, 106, 80);
+    border: 0;
+    color: rgb(255, 255, 255);
+    font-size: 1.125rem;
+    font-weight: 600;
+    line-height: 1.2em;
+    letter-spacing: 0%;
+}
+.primary-btn:hover{
+    border-radius: 1rem;
+    border: .16rem solid rgb(0, 106, 80);
+    background: transparent;
+    color: rgb(0, 106, 80);
+    font-size: 1.125rem;
+    box-shadow: .2rem .2rem .5rem 0rem rgba(0, 106, 80, 0.3);
+}
+/* NAV BAR STYLES */
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-title{
+    color: rgb(14, 14, 14);
+    font-size: 2rem;
+    font-weight: 700;
+    line-height: 2.5rem;
+    letter-spacing: 0%;
+    padding: .6rem;
+}
+.nav-title:hover{
+    background-image: url("./assets/Bangladesh-Flag-Custom.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: transparent;
+    border-radius: 2rem;
+    background-position: center;
+}
+/* Hero Section Styles */
+header{
+    background-color:rgb(198, 228, 214) ;
+    border-radius: 24px;
+    padding: 1rem 0;
+}
+.hero{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /* gap: 20rem; */
+    margin: 5rem 0rem;
+}
+.hero1{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1.5rem;
+}
+.hero-subtitle{
+    color: rgba(14, 14, 14, 0.5);
+    font-family: Fira Sans;
+    font-size: 1.5rem;
+    font-weight: 500;
+    line-height: 1.2em;
+    letter-spacing: 0%;
+    text-align: left;
+}
+.hero-heading{
+    color: rgb(14, 14, 14);
+    font-family: Fira Sans;
+    font-size: 3.5rem;
+    font-weight: 700;
+    line-height: 1.2em;
+    letter-spacing: 0%;
+    text-align: left;
+    padding-bottom: 1rem;
+}
+#Extra-B{
+    font-size: 4rem;
+    font-weight: 800;
 }
