--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,12 @@
 *{
     margin: 0;
     padding: 0;
-    /* background-color: #f5f5f5; */
 }
 body{
     max-width: 1600px;
     min-width: 600px;
     margin: 1.5rem auto;
+    background-color: #f5f5f5;
 }
 /* ------------------------- */
 /* Shared Styles */
@@ -41,12 +41,41 @@ body{
     font-size: 1.125rem;
     box-shadow: .2rem .2rem .5rem 0rem rgba(0, 106, 80, 0.3);
 }
+.section-title{
+    color: rgb(14, 14, 14);
+    font-family: Fira Sans;
+    font-size: 2.5rem;
+    font-weight: 700;
+    line-height: 1.2em;
+    letter-spacing: 0%;
+    margin: 2rem;
+}
+.body-title{
+    color: rgba(14, 14, 14, 0.8);
+    font-family: Fira Sans;
+    font-size: 1.25rem;
+    font-weight: 700;
+    line-height: 1.2em;
+    letter-spacing: 0%;
+    text-align: left;
+    padding: .75rem 0;
+}
+.body-text{
+    color: rgba(14, 14, 14, 0.7);
+    font-family: Fira Sans;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5em;
+    letter-spacing: 0%;
+    text-align: left;
+}
 /* NAV BAR STYLES */
 nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 1rem;
+    flex-wrap: wrap;
+    margin: 1rem;
 }
 .nav-title{
     color: rgb(14, 14, 14);
@@ -57,7 +86,7 @@ nav{
     padding: .6rem;
 }
 .nav-title:hover{
-    background-image: url("./assets/Bangladesh-Flag-Custom.jpg");
+    background-image: url("./assets/Group-1.png");
     background-size: cover;
     background-repeat: no-repeat;
     color: transparent;
@@ -74,6 +103,7 @@ header{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
     /* gap: 20rem; */
     margin: 5rem 0rem;
 }
@@ -82,6 +112,7 @@ header{
     flex-direction: column;
     align-items: flex-start;
     gap: 1.5rem;
+    margin: 1rem;
 }
 .hero-subtitle{
     color: rgba(14, 14, 14, 0.5);
@@ -105,4 +136,92 @@ header{
 #Extra-B{
     font-size: 4rem;
     font-weight: 800;
+}
+/* Pillers Styling */
+.pillers{
+    margin-top: 5rem;
+}
+.piller-cards-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 2rem;
+}
+.piller-cards{
+    display: flex;
+    flex-direction: column;
+    align-content: space-between;
+    max-width: 18.875rem;
+    padding: 1.5rem;
+    margin: 1rem auto;
+    border-radius: 1rem ;
+    background-color: white;
+}
+.piller-img{
+    width: 3.875rem;
+    padding-bottom: .75rem ;
+}
+/* Vision Styling */
+.vision{
+    margin-top: 2rem;
+}
+.v-body{
+    margin: 2rem;
+}
+.vision-card-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 2rem;
+}
+.vision-card{
+    display: flex;
+    flex-direction: column;
+    align-content: space-between;
+    max-width: 25.625rem;
+    padding: 2rem;
+    margin: 1rem auto;
+    border-radius: 1rem ;
+    background-color: white;
+    justify-content: flex-start;
+}
+.vimg{
+    width: 3.875rem;
+    padding-bottom: .75rem ;
+}
+#vision-1{
+    background-color: rgba(84, 144, 245, 0.2);
+}
+#vision-2{
+    background-color: rgb(198, 228, 214);
+}
+#vision-3{
+    background-color: rgb(247, 235, 207);
+}
+.vbtn{
+    padding: 3rem 0rem .5rem;
+}
+#vbtn1{
+    background: rgb(84, 144, 245);
+}
+#vbtn2{
+    background: rgb(9, 161, 92);
+}
+#vbtn3{
+    background: rgb(255, 194, 57);
+}
+#vbtn1:hover{
+    border: .16rem solid rgb(84, 144, 245);
+    background: transparent;
+    color: rgb(84, 144, 245);
+} 
+#vbtn2:hover{
+    border: .16rem solid rgb(9, 161, 92);
+    background: transparent;
+    color: rgb(9, 161, 92);
+}
+#vbtn3:hover{
+    border: .16rem solid rgb(255, 194, 57);
+    background: transparent;
+    color: rgb(255, 194, 57);
 }
