--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
     padding: 0;
 }
 body{
-    max-width: 1600px;
+    max-width: 1550px;
     min-width: 600px;
     margin: 1.5rem auto;
     background-color: #f5f5f5;
@@ -225,3 +225,4 @@ header{
     background: transparent;
     color: rgb(255, 194, 57);
 }
+/*Quote Section*/
