--- a/styles.css
+++ b/styles.css
@@ -226,3 +226,23 @@ header{
     color: rgb(255, 194, 57);
 }
 /*Quote Section*/
+.quote{
+    box-sizing: border-box;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    border-radius: 1rem;
+    background: rgb(255, 255, 255);
+    padding: 3rem 1.5rem 3rem 1.5rem;
+    margin: 0 2.5rem;
+    background-image: url("assets/quote-bg.png");
+    background-repeat: no-repeat;
+    background-position: 1.5rem 1.5rem;
+}
+.quote-desig{
+    color: rgba(14, 14, 14, 0.6);
+    font-family: Fira Sans;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0%;
+    text-align: left;
+}
