--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,10 @@ body{
     letter-spacing: 0%;
     text-align: left;
 }
+a{
+    text-decoration: none;
+    color:currentColor
+}
 /* NAV BAR STYLES */
 nav{
     display: flex;
@@ -232,7 +236,7 @@ header{
     border-radius: 1rem;
     background: rgb(255, 255, 255);
     padding: 3rem 1.5rem 3rem 1.5rem;
-    margin: 3rem 2.5rem;
+    margin: 5rem 2.5rem;
     background-image: url("assets/quote-bg.png");
     background-repeat: no-repeat;
     background-position: 1.5rem 1.5rem;
@@ -293,3 +297,17 @@ select{
     padding: 1rem 1rem 1rem 1rem;
 }
 /*News Section Styles*/
+.news{
+    
+}
+.new1{
+
+}
+.portalname{
+
+}
+.nimg img{
+    height: 306px;
+    width: 408px;
+    border-radius: 1.5rem
+}
