--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 
-.fira-sans-regular {
+.fira-sans-regular{
     font-family: "Fira Sans", serif;
     font-optical-sizing: auto;
     font-weight: normal;
@@ -16,6 +16,7 @@ body{
     min-width: 600px;
     margin: 1.5rem auto;
     background-color: #f5f5f5;
+    /* font-family: serif; */
 }
 /* ------------------------- */
 /* Shared Styles */
@@ -39,6 +40,25 @@ body{
     background: transparent;
     color: rgb(0, 106, 80);
     font-size: 1.125rem;
+    box-shadow: .2rem .2rem .5rem 0rem rgba(0, 106, 80, 0.3);
+}
+.secondary-btn{
+    background: rgb(255, 255, 255);
+    padding: 1.5rem 3.5rem;
+    color: rgba(14, 14, 14, 0.8);
+    font-family: Fira Sans;
+    font-size: 2.5rem;
+    font-weight: 700;
+    line-height: 1.2em;
+    letter-spacing: 0%;
+    text-align: center;
+}
+.secondary-btn:hover{
+    border-radius: 2rem;
+    border: .16rem solid rgb(198, 228, 214);
+    background: rgb(198, 228, 214);
+    color: rgba(14, 14, 14, 0.8);
+    font-size: 3rem;
     box-shadow: .2rem .2rem .5rem 0rem rgba(0, 106, 80, 0.3);
 }
 .section-title{
@@ -250,9 +270,6 @@ header{
     letter-spacing: 0%;
     text-align: left;
 }
-.opinion{
-    margin: 5rem 3rem;
-}
 /*Table Section Styles*/
 .table-container{
     box-sizing: border-box;
@@ -260,6 +277,7 @@ header{
     border-radius: 1rem;
     background: rgb(255, 255, 255);
     padding: 1.5rem 1.5rem 1.5rem 1.5rem;
+    margin: 2rem;
 }
 .opinion-table th{
     color: rgb(14, 14, 14);
@@ -298,16 +316,82 @@ select{
 }
 /*News Section Styles*/
 .news{
-    
+    margin: 2.5rem;
 }
 .new1{
-
+    box-sizing: border-box;
+    border: 0rem solid rgb(255, 255, 255);
+    border-radius: 1.5rem;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    margin:2rem 0;
+}
+.new2{
+    box-sizing: border-box;
+    border: 0rem solid rgb(255, 255, 255);
+    border-radius: 1.5rem;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: row-reverse;
+    flex-wrap:nowrap;
+    margin:2rem 0;
+}
+.nbody{
+    padding: 2rem;
+    margin: 0 3rem;
 }
 .portalname{
-
+    padding: 1rem 0;
 }
 .nimg img{
-    height: 306px;
-    width: 408px;
-    border-radius: 1.5rem
+    margin: 2rem;
+    height: 100%;
+    max-height: 306px;
+    width: auto;
+    border-radius: 1.5rem;
 }
+.nbody span{
+    padding: 1rem 0;
+    font-size: .8rem;
+    color: rgba(0, 0, 0, 0.5);
+}
+.neb{
+    padding:1rem 0;
+}
+/*Donate Section Styles*/
+.donation{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+#Dbody{
+    margin: 0 2rem;
+    padding: 2rem;
+    text-align: center;
+}
+.donation-card-container{
+    display: flex;
+    justify-content: space-between;
+    gap: 1.5rem;
+}
+.donation-card-container button{
+    box-sizing: border-box;
+    border: 1px solid rgb(255, 255, 255);
+    border-radius: 16px;
+}
+.amount{
+    padding: 1.25rem 2.5rem;
+    box-sizing: border-box;
+    border: 1px solid rgb(255, 255, 255);
+    background: rgb(255, 255, 255);
+    width: 80%;
+    margin: 2rem 7rem;
+    text-align: center;
+    color: rgba(14, 14, 14, 0.3);
+    font-family: Fira Sans;
+    font-size: 1.25rem;
+    font-weight: 400;
+    line-height: 1.2em;
+}
+/*Newsletter Section Styles*/
