--- a/styles.css
+++ b/styles.css
@@ -395,3 +395,55 @@ select{
     line-height: 1.2em;
 }
 /*Newsletter Section Styles*/
+.newsletter{
+    border-radius: 1.5rem;
+    background: rgb(198, 228, 214);
+    margin: 3rem 2.5rem;
+}
+.newsletter-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+    padding: 3rem 5rem 5rem;
+}
+.email{
+    color: rgba(14, 14, 14, 0.3);
+    font-family: Fira Sans;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.125em;
+    letter-spacing: 0%;
+    text-align: left;
+    padding: 1.125rem 2.5rem;
+}
+#email{
+    width: 85%;
+    border-radius: .5rem 0rem 0rem .5rem;
+    border: 0;
+}
+.collect-email{
+    display: flex;
+    gap: 0;
+}
+.Newsletter_Btn{
+    color: rgb(255, 255, 255);
+    font-family: Fira Sans;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 22px;
+    letter-spacing: 0%;
+    text-align: left;
+    padding: 1.125rem 2.5rem;
+    border-radius: 0px 8px 8px 0px;
+    background: rgb(0, 106, 80);
+    border: 0;
+}
+.Newsletter_Btn:hover{
+    border-radius: 0 .5rem .5rem 0;
+    border: .16rem solid rgb(0, 106, 80);
+    background: transparent;
+    color: rgb(0, 106, 80);
+    font-size: 1.125rem;
+    box-shadow: .2rem .2rem .5rem 0rem rgba(0, 106, 80, 0.3);
+}
