--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,8 @@ body{
     line-height: 1.2em;
     letter-spacing: 0%;
     text-align: center;
+    margin: 1rem;
+    width: 20rem;
 }
 .secondary-btn:hover{
     border-radius: 2rem;
@@ -309,10 +311,19 @@ thead{
 }
 select{
     box-sizing: border-box;
-    border: 1px solid rgb(198, 228, 214)inset;
+    border: .16rem solid rgb(198, 228, 214)inset;
     border-radius: .5rem;
     background: rgb(198, 228, 214);
     padding: 1rem 1rem 1rem 1rem;
+
+}
+select:hover{
+    border-radius: .5rem;
+    border: .16rem solid rgb(0, 106, 80);
+    background: transparent;
+    color: rgb(0, 106, 80);
+    font-size: 1rem;
+    box-shadow: .2rem .2rem .5rem 0rem rgba(0, 106, 80, 0.3);
 }
 /*News Section Styles*/
 .news{
@@ -324,6 +335,7 @@ select{
     border-radius: 1.5rem;
     background-color: rgb(255, 255, 255);
     display: flex;
+    flex-wrap: nowrap;
     margin:2rem 0;
 }
 .new2{
@@ -333,8 +345,18 @@ select{
     background-color: rgb(255, 255, 255);
     display: flex;
     flex-direction: row-reverse;
-    flex-wrap:nowrap;
+    flex-wrap:nowrap ;
     margin:2rem 0;
+}
+@media (max-width: 768px) {
+    .new2{
+        flex-wrap: wrap;
+    }
+}
+@media (max-width: 768px) {
+    .new1{
+        flex-wrap: wrap;
+    }
 }
 .nbody{
     padding: 2rem;
@@ -342,11 +364,14 @@ select{
 }
 .portalname{
     padding: 1rem 0;
+    max-height: 2.5rem;
 }
 .nimg img{
     margin: 2rem;
     height: 100%;
     max-height: 306px;
+    width: 100%;
+    max-width: 408px;
     width: auto;
     border-radius: 1.5rem;
 }
@@ -373,6 +398,7 @@ select{
 .donation-card-container{
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     gap: 1.5rem;
 }
 .donation-card-container button{
@@ -447,3 +473,4 @@ select{
     font-size: 1.125rem;
     box-shadow: .2rem .2rem .5rem 0rem rgba(0, 106, 80, 0.3);
 }
+/*Footer Section Styles*/
